# ARGUS_vlm

./: .env.local.example  .gitattributes  .gitignore  AGENTS.md  Ad Product Taxonomy 2.0.tsv  CLAUDE.md  Prompt.md  README.md  STATUS.md  brand_ocr_normalize.yaml  brands_aliases.yaml  config.example.yaml  crawler_prompt.txt  duplicate_merge_plan.md  entity_crawler.yaml  getting_started.html  intellegence_crawler.md  intelligence_crawler.yaml  issues.md  ocr.bat  pyproject.toml  start.bat  stop.bat  suggestions.md  taxonomy.yaml  technical_detail.html  vlm.bat
ad_classifier/: __main__.py  _env.py  config.py  iab_content_taxonomy.py  iab_taxonomy.py  paths.py
ad_classifier/agent/: __init__.py  catalog.py  client.py  loop.py  models.py  prompt.py  schema.py
ad_classifier/api/: app.py  artifacts.py  deps.py  factories.py
ad_classifier/brand_profiles/: __init__.py  matching.py  wikidata.py  wikimedia.py
ad_classifier/campaigns/: __init__.py  ad_vectors.py  candidates.py  clustering.py  discover.py  research.py  research_agent.py  research_agent_parse.py  research_deep.py  research_helpers.py  signals.py  suggestions.py
ad_classifier/cli/: __init__.py  agent.py  bench_vectors.py  campaigns.py  dedup.py  entity_graph.py  ingest.py  ocr.py  operational.py
ad_classifier/creative/: __init__.py
ad_classifier/db/: __init__.py  connection.py
ad_classifier/dedup/: __init__.py  file_hash.py  models.py  phash.py  post_ocr.py  service.py  similarity.py  verdict.py
ad_classifier/diagnostics/: env.py  paddle_rocm.py
ad_classifier/embeddings/: __init__.py  dependencies.py
ad_classifier/entity_graph/: __init__.py  crawler.py  crawler_config.py  discovery_vlm.py  manager.py  models.py  repository.py  resolver.py  rows.py  schema.py  submitted_ads.py  submitted_repairs.py  targets.py  taxonomy_alignment.py  utils.py
ad_classifier/ingest/: __init__.py  ffmpeg.py  models.py  persistence.py  service.py  transcript.py  whisper.py  whisper_cpp.py  whisper_faster.py  whisper_mock.py
ad_classifier/intelligence_crawler/: __init__.py  cli.py  config.py  consumer_service.py  contract.py  dedup.py  detect.py  diagnostics.py  digest.py  exports.py  google_atc_rpc.py  google_crawl_state.py  google_creatives.py  health.py  ids.py  manager.py  meta_ad_library_probe.py  meta_probe_dom.py  meta_probe_parsing.py  models.py  normalized.py  repository.py  repository_ledger.py  repository_resources.py  repository_rows.py  repository_runtime.py  repository_signals.py  request_guard.py  run_policy.py  runner.py  scheduler_service.py  schema.py  scoring.py  tiers.py  timeutils.py  watchlist.py  worker_service.py
ad_classifier/knowledge/: __init__.py  backfill.py  loader.py  manager.py  models.py  runtime.py  schema.py
ad_classifier/marketing/: _utils.py  brand.py  brands_aliases.yaml  commercial.py  extract.py  ocr_normalize.py  offer_extraction.py  price_parsing.py  product_utils.py  vehicle_makes.txt
ad_classifier/models/: __init__.py  ads.py  agent.py  brand_profiles.py  campaigns.py  classification.py  common.py  iab.py  jobs.py  marketing.py  similarity.py
ad_classifier/pipeline/: alignment.py  manifest.py
ad_classifier/search/: __init__.py  fts.py  hybrid.py  query_expansion.py  results.py  rrf.py  visual_query.py
ad_classifier/vectors/: __init__.py  sqlite_vec.py  store.py
ad_classifier/vlm/: __init__.py  cleanup.py  complexity.py  correction.py  http.py  models.py  prompt.py  schema.py  validation.py  verifier.py  visual_verify.py
ad_classifier/worker/: document_ocr.py  runner.py  stages.py
docs/: DEMO_RUNBOOK.md  README.md  demo_present.md  digital_ad_inventory_strategy.md  digital_video_ad_venues_research.md  intel_crawler_followups.md  intellegence_crawler.md  intellegence_crawler_overview.md  intelligence_crawler_normalized_ad_schema.md  intelligence_crawler_operations.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
output/: PRESENTER_FLASHCARDS_v3.md  SEARCH_DEMO_QUERIES.md  argus-showcase-bg-scorecard.txt  argus-showcase-bg.pptx  argus-showcase-presentation.pptx
prompts/: argus_ad_verifier.txt  argus_ad_verifier_frontier_strict.txt  argus_agent_system.txt  gemma_ad_verifier.txt  gemma_agent_system.txt  ocr_cleanup.txt
samples/: expected-output.sample.json
scripts/: run_model_benchmark.py  stop_argus.py
tests/: test_config_example.py  test_iab_content_taxonomy.py  test_iab_taxonomy.py  test_knowledge.py
tests/agent/: conftest.py  test_api.py  test_client.py  test_loop.py  test_schema.py  test_tools.py
tests/api/: test_phase8_api.py  test_public_api_key.py  test_settings_api.py
tests/brand_profiles/: test_wikimedia.py
tests/campaigns/: test_discover.py  test_research_agent.py  test_research_rollups.py
tests/cli/: test_init_db_cli.py
tests/creative/: __init__.py  test_panel.py  test_storyboard.py
tests/db/: test_brand_profile_repository.py  test_campaign_repositories.py  test_classification_repository.py  test_init_db.py  test_marketing_repository.py
tests/dedup/: test_phash.py  test_post_ocr.py  test_similarity.py
tests/diagnostics/: test_env.py  test_paddle_rocm.py
tests/embeddings/: test_dependency_errors.py  test_image_embedder.py  test_text_embedder.py
tests/entity_graph/: test_entity_graph.py
tests/ingest/: test_manifest.py  test_service.py
tests/intelligence_crawler/: test_api.py  test_config.py  test_detect.py  test_diagnostics.py  test_google_atc_adapter.py  test_http.py  test_meta_ad_library_probe.py  test_meta_ad_library_ui_adapter.py  test_normalized.py  test_repository.py  test_resource_variants.py  test_rss_adapter.py  test_runner.py  test_schema.py  test_scoring.py  test_services.py  test_sources.py  test_watchlist.py  test_youtube_adapter.py
tests/marketing/: test_brand.py  (+1 more)
(+210 files in other folders)
